fix: 🐛 Various alignment and layout fixes
Various fixes to character sheets, item sheets and the like.

Also a fix to the calendar-weather check,
which should return early if calendar weather isn't installed and the user has been informed of the integration.

--- a/src/styles/sheets/_item.scss
+++ b/src/styles/sheets/_item.scss
@@ -4,6 +4,10 @@
 	height: 100%;
 	max-width: 600px;
 	max-height: 700px;
+	.header {
+		border: 6px solid transparent;
+		border-image: url(../assets/journal-art/small-border.webp) 100/18px repeat;
+	}
 }
 
 .forbidden-lands.item .multivalue {
@@ -69,7 +73,7 @@
 }
 
 .forbidden-lands.item .avatar img:hover {
-	box-shadow: 0 0 10px red;
+	box-shadow: 0 0 10px #a00;
 	cursor: pointer;
 }
 
